manifests/ark.yml
# kubectl apply -f manifests/ark.yml
# kubectl delete -f manifests/ark.yml

apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
  - name: debug
    image: ghcr.io/angellusmortis/ark-server:master
    imagePullPolicy: Always
    command:
      - sleep
      - infinity
    volumeMounts:
      - mountPath: /srv/ark/server
        name: server
  volumes:
    - name: server
      persistentVolumeClaim:
        claimName: ark-server-b
