manifests/debug.yml
# kubectl apply -f manifests/debug.yml
# kubectl delete -f manifests/debug.yml

apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
  - name: debug
    image: dersimn/netutils:ubuntu
    imagePullPolicy: IfNotPresent
    command:
      - sleep
      - infinity
  #   volumeMounts:
  #     - mountPath: /data
  #       name: data
  # volumes:
  #   - name: data
  #     persistentVolumeClaim:
  #       claimName: lacc-data
