manifests/gpu.yml
apiVersion: v1
kind: Pod
metadata:
  name: nvidia-version-check
spec:
  restartPolicy: OnFailure
  containers:
  - name: nvidia-version-check
    image: "nvcr.io/nvidia/cuda:12.1.0-base-ubuntu22.04"
    command: ["sleep", "infinity"]
    resources:
      limits:
        nvidia.com/gpu: "1"
  # runtimeClassName: nvidia
  nodeSelector:
      kubernetes.io/hostname: storage-1
